<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/sportsImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:riv_corner_radius="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/sportsImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_ago"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="#A9A9A9"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="5dp"
                android:text="@string/title_placeholder"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
        </LinearLayout>


        <TextView
            android:id="@+id/subTitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:padding="5dp"
            android:text="@string/news_info_placeholder"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>

</androidx.cardview.widget.CardView>