<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_image">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:riv_corner_radius="10dip" />


            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <FrameLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsImage"
                android:background="@drawable/round_white"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-200dp">

                <ImageView
                    android:src="@drawable/ic_date"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
                <TextView
                    android:textColor="#606060"
                    android:id="@+id/publishedAt"
                    android:layout_marginLeft="27dp"
                    android:layout_marginRight="10dp"
                    android:text="01 Agustus 2021"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/fav_btn"
                android:src="@drawable/ic_fav_border"
                android:layout_below="@id/newsImage"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-50dp"
                />

        </RelativeLayout>



        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/layout_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textColor="#A9A9A9"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/title_placeholder"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
            </LinearLayout>


            <TextView
                android:id="@+id/desc"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:text="@string/news_info_placeholder"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc">

                <TextView
                    android:id="@+id/source"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="source" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@id/source"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:text="time" />
            </RelativeLayout>




        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>